# aoc2021

go/: .gitignore  README.md  aoc.go  go.mod
go/days/: day01.go
go/days/day01/: day01.go
go/days/day02/: day02.go
go/days/day04/: day04.go
go/days/day05/: day05.go
go/days/day12/: day12.go
go/days/day25/: day25.go
go/inputs/: input04.txt
go/utils/files/: file.go
haskell/: .gitignore  README.md  aoc2021.cabal
haskell/common/: Advent.hs
haskell/days/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs
