cabal-version:      2.4
name:               aoc2021
version:            0.1.0.0
synopsis:           Advent od Code 2021 Solutions
author:             Aleksa PrtenjaÄa
maintainer:         aleksa.prtenjaca03@gmail.com

source-repository head
    type:     git
    location: https://github.com/Prki42/aoc2021

library
    hs-source-dirs:   common
    default-language: Haskell2010

    exposed-modules:
        Advent

    build-depends:
        base ^>=4.14.3.0

common day
    build-depends:    aoc2021, base
    hs-source-dirs:   days
    default-language: Haskell2010

executable Day01
    import:  day
    main-is: Day01.hs

executable Day02
    import:  day
    main-is: Day02.hs

executable Day03
    import:  day
    main-is: Day03.hs

executable Day04
    import:  day
    main-is: Day04.hs

executable Day06
    import:  day
    main-is: Day06.hs

executable Day07
    import:  day
    main-is: Day07.hs

executable Day08
    import:  day
    build-depends: containers
    main-is: Day08.hs

executable Day09
    import:  day
    build-depends: containers
    main-is: Day09.hs

executable Day10
    import:  day
    build-depends: containers
    main-is: Day10.hs

executable Day11
    import:  day
    build-depends: containers
    main-is: Day11.hs